--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pet Store</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Lobster|Lato:300,400,700' rel='stylesheet' type='text/css'>
-
 </head>
 <body>
 	<div class="container"> <!--container-->
@@ -18,7 +17,7 @@
 				<h3 class="logo-text">Pet Store</h3>
 			</div> <!--end of col-md-4-->
 			<div class="col-md-4 col-md-offset-4"> <!--col-md4 with offset 4-->
-				<ul class="nav nav-tabs"> <!--nav-->
+				<ul class="nav nav-tabs pull-right"> <!--nav-->
 					<li role="presentation" class="active"><a href="#">Home</a></li>
 					<li role="presentation"><a href="#">Profile</a></li>
 					<li role="presentation"><a href="#">Message</a></li>
@@ -37,10 +36,12 @@
 	</div> <!--end of container fluid-->
 	<div class="container"> <!--container-->
 		<div class="row"> <!--row-->
-			<div class="col-md-7 col-md-offset-1"> <!--featured-->
+			<div class="col-md-7"> <!--featured-->
 				<div class="row"> <!--featured text row-->
-					<h1 class="featured-text">featured</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ea suscipit, laboriosam voluptas delectus obcaecati, sint maiores debitis omnis cum ratione impedit! Optio assumenda consectetur animi dignissimos! Incidunt, dolorum, soluta.</p>
+					<div class="col-md-12"> <!--featuerd heading column-->
+						<h2 class="featured-text">featured</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ea suscipit, laboriosam voluptas delectus obcaecati, sint maiores debitis omnis cum ratione impedit! Optio assumenda consectetur animi dignissimos! Incidunt, dolorum, soluta.</p>
+					</div> <!--end of featuerd heading column-->
 				</div> <!--end of featured text row-->
 				<div class="row"> <!--inner row for featured -->
 				  <div class="col-sm-6 col-md-4"> <!--featured 1-->
@@ -75,8 +76,8 @@
 				  </div> <!--end featured 3-->
 				</div> <!--end inner row for featured-->
 			</div> <!--end of featured-->
-			<div class="col-md-3 col-md-offset-1 adopt-text"> <!--services-->
-				<h1 class="featured-text">services</h1>
+			<div class="col-md-3 col-md-offset-2 adopt-text"> <!--services-->
+				<h2 class="featured-text">services</h2>
 				<div class="row"> <!--services adopt a cat row-->
 					<a href="#" class="upper-text">adopt a cat</a>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -92,8 +93,31 @@
 			</div> <!--end of services-->
 		</div> <!--end of row-->
 	</div> <!--end of container-->
-
-	<!-- scripts -->
+	<div class="container-fluid footer"> <!--footer div-->
+		<div class="row inner-footer"> <!--inner footer-->
+			<div class="col-md-3 footer-cols"> <!--footer-logo col-->
+				<img src="img/petstore_logo.png" alt="Pet Store Logo" class="footer-logo center-block">
+			</div> <!--end of footer-logo col-->
+			<div class="col-md-3 footer-cols"> <!--address-->
+				<address>
+					Pet Store <br>
+					Fresno, CA <br>
+					<a href="mailto:info@petstore.com">Info@petstore.com</a>
+				</address>
+			</div> <!--end of address-->
+			<div class="col-md-3"> <!--social media-->
+				<i class="fa fa-twitter" aria-hidden="true"></i>Twitter<br>
+				<i class="fa fa-facebook" aria-hidden="true"></i>Facebook<br>
+				<i class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn<br>
+			</div> <!--end of social media-->
+		</div> <!--end of inner footer-->
+		<div class="row"> <!--copyright row-->
+			<div class="col-md-12 copy"> <!--copyrights-->
+				<p class="text-center"> &copy;Pet Store, Inc. All rights reserved. </p>
+			</div> <!--end of copyrights-->
+		</div> <!--end of copyright row-->
+	</div> <!--end of footer div-->
+	<!-- scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
