added thumbnail and description of doctors; added table with values and updated google maps

--- a/pet-store-home.html
+++ b/pet-store-home.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pet Store</title>
+	<title>Pet-Store-Home</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Lobster|Lato:300,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
-  <link href='https://fonts.googleapis.com/css?family=Lobster|Lato:300,400,700' rel='stylesheet' type='text/css'>
+	
 </head>
 <body>
 	<div class="container"> <!--container-->
@@ -18,9 +19,9 @@
 			</div> <!--end of col-md-4-->
 			<div class="col-md-4 col-md-offset-4"> <!--col-md4 with offset 4-->
 				<ul class="nav nav-tabs pull-right"> <!--nav-->
-					<li role="presentation" class="active"><a href="#">Home</a></li>
-					<li role="presentation"><a href="#">Profile</a></li>
-					<li role="presentation"><a href="#">Message</a></li>
+					<li role="presentation" class="active"><a href="pet-store-home.html">Home</a></li>
+					<li role="presentation"><a href="#">Products</a></li>
+					<li role="presentation"><a href="pet-store-contact.html">Contact Us</a></li>
 				</ul> <!--end of nav-->
 			</div> <!--end of col-md4 with offset 4-->
 		</div> <!--end of row-->
@@ -45,9 +46,9 @@
 				</div> <!--end of featured text row-->
 				<div class="row"> <!--inner row for featured -->
 				  <div class="col-sm-6 col-md-4"> <!--featured 1-->
-				    <div class="thumbnail">
+				    <div class="thumbnail thumbnail_products">
 				      <img src="img/product1.jpg" alt="Doggie Food" class="img-responsive">
-				      <div class="caption">
+				      <div class="caption caption_products">
 				        <h3>Dog Bowl</h3>
 				        <p>The best dog bowl for your dog.</p>
 				        <p><a href="#" class="btn btn-primary" role="button">Purchase Now</a></p>
@@ -55,7 +56,7 @@
 				    </div>
 				  </div> <!--end featured 1-->
 					<div class="col-sm-6 col-md-4"> <!--featured 2-->
-				    <div class="thumbnail">
+				    <div class="thumbnail thumbnail_products">
 				      <img src="img/product2.jpg" alt="Cat Toy" class="img-responsive">
 				      <div class="caption">
 				        <h3>Cat Toy</h3>
@@ -65,7 +66,7 @@
 				    </div>
 				  </div> <!--end featured 2-->
 					<div class="col-sm-6 col-md-4"> <!--featured 3-->
-				    <div class="thumbnail">
+				    <div class="thumbnail thumbnail_products">
 				      <img src="img/product3.jpg" alt="Parrot Stuff" class="img-responsive">
 				      <div class="caption">
 				        <h3>Parrot Stuff</h3>
