fixed names of index.html and contact.html

--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
 			</div> <!--end of col-md-4-->
 			<div class="col-md-4 col-md-offset-4"> <!--col-md4 with offset 4-->
 				<ul class="nav nav-tabs pull-right"> <!--nav-->
-					<li role="presentation"><a href="pet-store-home.html">Home</a></li>
+					<li role="presentation"><a href="index.html">Home</a></li>
 					<li role="presentation"><a href="#">Products</a></li>
-					<li role="presentation"class="active"><a href="pet-store-contact.html">Contact Us</a></li>
+					<li role="presentation"class="active"><a href="contact.html">Contact Us</a></li>
 				</ul> <!--end of nav-->
 			</div> <!--end of col-md4 with offset 4-->
 		</div> <!--end of row-->
