--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Lobster|Lato:300,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
-	
+
 </head>
 <body>
 	<div class="container"> <!--container-->
@@ -19,9 +19,9 @@
 			</div> <!--end of col-md-4-->
 			<div class="col-md-4 col-md-offset-4"> <!--col-md4 with offset 4-->
 				<ul class="nav nav-tabs pull-right"> <!--nav-->
-					<li role="presentation" class="active"><a href="pet-store-home.html">Home</a></li>
+					<li role="presentation" class="active"><a href="index.html">Home</a></li>
 					<li role="presentation"><a href="#">Products</a></li>
-					<li role="presentation"><a href="pet-store-contact.html">Contact Us</a></li>
+					<li role="presentation"><a href="contact.html">Contact Us</a></li>
 				</ul> <!--end of nav-->
 			</div> <!--end of col-md4 with offset 4-->
 		</div> <!--end of row-->
